# FSE_trabalho_3

./: .gitignore  README.md  sdkconfig.old
components/esp32-DHT11/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  commands.c  commands.h  infrared.c  infrared.h  ir_decoder.c  ir_decoder.h  ir_encoder.c  ir_encoder.h  joystick.c  joystick.h  ledRGB.c  ledRGB.h  led_rgb.c  led_rgb.h  main.c  motor.c  motor.h  mqtt.c  mqtt.h  nvsMem.c  nvsMem.h  nvs_mem.c  nvs_mem.h  states.h  telemetry.c  telemetry.h  temperature.c  temperature.h  temperature_analogic.c  temperature_analogic.h  temperature_dht11.c  temperature_dht11.h  wifi.c
main/joystick/main/: oneshot_read_main.c
