idf_component_register(SRCS "nvsMem.c" "ledRGB.c" "main.c" 
                            "adc.c" 
                            "joystick.c"
                            "temperature_analogic.c"
                            "temperature_dht11.c" 
                            "motor.c"
                            "states.h"
                            "infrared.c"
                            "ir_encoder.c"
                    INCLUDE_DIRS "."
                    REQUIRES "esp32-DHT11" "esp_adc" "nvs_flash")
