idf_component_register(SRCS
                            "main.c"
                            "temperature.c"
                            "adc.c"
                            "joystick.c"
                            "motor.c"
                            "states.h"
                            "infrared.c"
                            "ir_encoder.c"
                            "ir_decoder.c"
                            "mqtt.c"
                            "wifi.c"
                            "telemetry.c"
                            "commands.c"
                            "nvs_mem.c"
                            "led_rgb.c"
                    INCLUDE_DIRS "."
                    REQUIRES
                        "esp32-DHT11"
                        "esp_adc"
                        "nvs_flash"
                        "esp_wifi"
                        "esp_http_client"
                        "mqtt")
")
